* Added full-text search * Automatically index project issues for search * Attachments work now * a lot of ui improvements
