# api/JiraAPI/Models/SearchResults.cs
@@ -1,0 +1,57 @@
+﻿// Code generated by Microsoft (R) AutoRest Code Generator 0.16.0.0
+// Changes may cause incorrect behavior and will be lost if the code is
+// regenerated.
+
+namespace FastJira.Models
+{
+    using System;
+    using System.Linq;
+    using System.Collections.Generic;
+    using Newtonsoft.Json;
+    using Microsoft.Rest;
+    using Microsoft.Rest.Serialization;
+
+    public partial class SearchResults
+    {
+        /// <summary>
+        /// Initializes a new instance of the SearchResults class.
+        /// </summary>
+        public SearchResults() { }
+
+        /// <summary>
+        /// Initializes a new instance of the SearchResults class.
+        /// </summary>
+        public SearchResults(int? startAt = default(int?), int? maxResults = default(int?), int? total = default(int?), IList<IssueBean> issues = default(IList<IssueBean>))
+        {
+            StartAt = startAt;
+            MaxResults = maxResults;
+            Total = total;
+            Issues = issues;
+        }
+
+        /// <summary>
+        /// The index of the first item returned on the page.
+        /// </summary>
+        [JsonProperty(PropertyName = "startAt")]
+        public int? StartAt { get; private set; }
+
+        /// <summary>
+        /// The maximum number of results that could be on the page.
+        /// </summary>
+        [JsonProperty(PropertyName = "maxResults")]
+        public int? MaxResults { get; private set; }
+
+        /// <summary>
+        /// The number of results on the page.
+        /// </summary>
+        [JsonProperty(PropertyName = "total")]
+        public int? Total { get; private set; }
+
+        /// <summary>
+        /// The list of issues found by the search.
+        /// </summary>
+        [JsonProperty(PropertyName = "issues")]
+        public IList<IssueBean> Issues { get; private set; }
+
+    }
+}
